fix z-index of datepicker, props @JosKlever

--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -95,7 +95,7 @@ body.koko-analytics {
 .ka-chart {
   overflow: visible;
   min-height: 200px;
-  font-size: 14px;
+  font-size: 0.8rem;
 }
 .ka-chart--tooltip {
   position: absolute;
